# flashIndorank

./: .gitignore  AGENTS.md  LICENSE  README.md  TRAINING.md  pyproject.toml  requirements-runpod-gpu.txt  requirements-train.txt  requirements.txt
benchmarks/: benchmark.py  eval_indonesian.py
src/flashindorank/: __init__.py  __main__.py  api.py  config.py  custom.py  models.py  reranker.py  schemas.py
tests/: conftest.py  test_api.py  test_custom.py  test_reranker.py
training/: common.py  compare_openrouter.py  eval_miracl.py  evaluate.py  export_onnx.py  hard_negatives.py  miracl_data.py  pairs_to_triplets.py  prepare_data.py  prepare_distill_data.py  quiz_hard.py  quiz_new.py  runpod_full_train.sh  teacher_score.py  train.py  train_distill.py  upload_to_hf.py
